wdl-analysis/tests/validation/int-out-of-range.errors
warning[UnusedDeclaration]: unused declaration `a`
  ┌─ tests/validation/int-out-of-range:6:9
  │
6 │     Int a = 0
  │         ^

warning[UnusedDeclaration]: unused declaration `b`
  ┌─ tests/validation/int-out-of-range:7:9
  │
7 │     Int b = 9223372036854775807
  │         ^

warning[UnusedDeclaration]: unused declaration `c`
  ┌─ tests/validation/int-out-of-range:8:9
  │
8 │     Int c = -9223372036854775807
  │         ^

warning[UnusedDeclaration]: unused declaration `d`
  ┌─ tests/validation/int-out-of-range:9:9
  │
9 │     Int d = 0x8000000000000000
  │         ^

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
  ┌─ tests/validation/int-out-of-range:9:13
  │
9 │     Int d = 0x8000000000000000
  │             ^^^^^^^^^^^^^^^^^^ this literal integer is not in range

warning[UnusedDeclaration]: unused declaration `e`
   ┌─ tests/validation/int-out-of-range:10:9
   │
10 │     Int e = 9223372036854775808 
   │         ^

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range:10:13
   │
10 │     Int e = 9223372036854775808 
   │             ^^^^^^^^^^^^^^^^^^^ this literal integer is not in range

warning[UnusedDeclaration]: unused declaration `f`
   ┌─ tests/validation/int-out-of-range:11:9
   │
11 │     Int f = -9223372036854775808
   │         ^

warning[UnusedDeclaration]: unused declaration `g`
   ┌─ tests/validation/int-out-of-range:12:9
   │
12 │     Int g = - 9223372036854775809
   │         ^

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range:12:13
   │
12 │     Int g = - 9223372036854775809
   │             ^^^^^^^^^^^^^^^^^^^^^ this literal integer is not in range

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range:18:12
   │
18 │         d: 0x8000000000000000
   │            ^^^^^^^^^^^^^^^^^^ this literal integer is not in range

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range:19:12
   │
19 │         e: 9223372036854775808 
   │            ^^^^^^^^^^^^^^^^^^^ this literal integer is not in range

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range:21:12
   │
21 │         g: - 9223372036854775809
   │            ^^^^^^^^^^^^^^^^^^^^^ this literal integer is not in range

